Ajustes de estilo e link do projeto pokedex

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
       <div class="container-about d-flex">
         <div class="pe-4 py-5">
           <p class="fs-5">
-            Meu nome é Allan, tenho 19 anos. Moro no Rio de Janeiro.
+            Meu nome é Allan, tenho 20 anos. Moro no Rio de Janeiro.
           </p>
           <p class="fs-5">
             Especializado no desenvolvimento Front-end, estou sempre buscando entregar a melhor interface funcional ao usuário. Sou um profissional curioso e atento.
@@ -160,17 +160,18 @@ Experiência com HTML 5, CSS 3, Material-UI, React Js, Javascript ES6, TypeScrip
           <div class="card mb-3">
             <div class="row">
               <div class="col-md-4">
-                <img src="./assets/Pokemon.png" class="img-fluid rounded-start" alt="..." />
+                <img src="./assets/Pokemon.png" class="img-projects rounded-start" alt="..." />
               </div>
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title fs-3">PokeDex</h5>
+                  <hr/>
                   <p class="card-text">
                     This is a wider card with supporting text below as a natural
                     lead-in to additional content. This content is a little bit
                     longer.
                   </p>
-                  <a type="link" href="https://www.google.com" target="_blank"
+                  <a type="link" href="https://pokedex-allan.web.app" target="_blank"
                     class="btn btn-animation btn-default">Web</a>
                   <a type="link" href="https://github.com/Allan-SS/Pokemon-react" target="_blank"
                     class="btn btn-animation btn-default">Code</a>
@@ -183,19 +184,21 @@ Experiência com HTML 5, CSS 3, Material-UI, React Js, Javascript ES6, TypeScrip
           <div class="card mb-3">
             <div class="row">
               <div class="col-md-4">
-                <img src="./assets/Photo-description.jpg" class="img-fluid rounded-start" alt="..." />
+                <img src="./assets/github-search.png" class="img-projects rounded-start" alt="..." />
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title fs-3">PROJETO</h5>
+                  <h5 class="card-title fs-3">GitHub Search</h5>
+                  <hr/>
                   <p class="card-text">
                     This is a wider card with supporting text below as a natural
                     lead-in to additional content. This content is a little bit
                     longer.
                   </p>
-                  <a type="link" href="https://www.google.com" target="_blank"
+                  <a type="link" href="https://github-search-allan.web.app" target="_blank"
                     class="btn btn-animation btn-default">Web</a>
-                  <a type="link" href="#" target="_blank" class="btn btn-animation btn-default">Code</a>
+                  <a type="link" href="https://github.com/Allan-SS/GitHub-Search" target="_blank"
+                    class="btn btn-animation btn-default">Code</a>
                 </div>
               </div>
             </div>
@@ -205,41 +208,20 @@ Experiência com HTML 5, CSS 3, Material-UI, React Js, Javascript ES6, TypeScrip
           <div class="card mb-3">
             <div class="row">
               <div class="col-md-4">
-                <img src="./assets/IMG_20210508_005453_404.jpg" class="img-fluid rounded-start" alt="..." />
+                <img src="./assets/todo-list.png" class="img-projects rounded-start" alt="..." />
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title fs-3">PROJETO</h5>
+                  <h5 class="card-title fs-3">ToDo List</h5>
+                  <hr/>
                   <p class="card-text">
                     This is a wider card with supporting text below as a natural
                     lead-in to additional content. This content is a little bit
                     longer.
                   </p>
-                  <a type="link" href="https://www.google.com" target="_blank"
+                  <a type="link" href="https://todo-list-allan-babb9.web.app" target="_blank"
                     class="btn btn-animation btn-default">Web</a>
-                  <a type="link" href="#" target="_blank" class="btn btn-animation btn-default">Code</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 d-flex justify-content-center">
-          <div class="card mb-3">
-            <div class="row">
-              <div class="col-md-4">
-                <img src="./assets/IMG_20210508_005453_404.jpg" class="img-fluid rounded-start" alt="..." />
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title fs-3">PROJETO</h5>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                  <a type="link" href="https://www.google.com" target="_blank"
-                    class="btn btn-animation btn-default">Web</a>
-                  <a type="link" href="#" target="_blank" class="btn btn-animation btn-default">Code</a>
+                  <a type="link" href="https://github.com/Allan-SS/To-Do" target="_blank" class="btn btn-animation btn-default">Code</a>
                 </div>
               </div>
             </div>
@@ -255,7 +237,7 @@ Experiência com HTML 5, CSS 3, Material-UI, React Js, Javascript ES6, TypeScrip
         <a target="_blank" href="https://www.linkedin.com/in/allan-sousa-silva/" title="Linkedin">
           <img class="img-app" src="./assets/linkedin.svg" alt="imagem-Linkedin" />
         </a>
-        <a target="_blank" href="https://drive.google.com/file/d/1RBgwfrxeyftpNBlvEDMC9yiRhUeA1R3G/view?usp=sharing"
+        <a target="_blank" href="https://drive.google.com/file/d/13FrNGY34RnxiVWu0rsEcaFzoCkLyITrq/view?usp=sharing"
           title="Curriculum vitæ">
           <img class="img-app" src="./assets/currículo.png" alt="imagem-CV" />
         </a>
