Updated some descriptions and add an information for cards

--- a/src/index.html
+++ b/src/index.html
@@ -60,11 +60,6 @@
           ALLAN<span class="text-light ps-3">SILVA</span>
         </h1>
         <p class="fs-3">Front-End Developer</p>
-        <!-- <p id="text-description" class="fs-6">
-          Desenvolvimento Web - Programação de sites responsivos usando CMS
-          Wordpress, Landing Pages, Lojas Virtuais, e Montagem de
-          Email-Marketing, Para saber mais entre em contato.
-        </p> -->
       </div>
     </section>
     <section id="about" class="container h-100">
@@ -167,9 +162,10 @@ Experiência com HTML 5, CSS 3, Material-UI, React Js, Javascript ES6, TypeScrip
                   <h5 class="card-title fs-3">PokeDex</h5>
                   <hr/>
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
+                   Enciclopédia que agrupa informações sobre os Pokemons de 1.º Geração
+                  </p>
+                  <p class="card-text">
+                    ReactJS, FireBase, Sass, React-Bootstrap, Integração com API Rest
                   </p>
                   <a type="link" href="https://pokedex-allan.web.app" target="_blank"
                     class="btn btn-animation btn-default">Web</a>
@@ -191,9 +187,10 @@ Experiência com HTML 5, CSS 3, Material-UI, React Js, Javascript ES6, TypeScrip
                   <h5 class="card-title fs-3">GitHub Search</h5>
                   <hr/>
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
+                    Aplicação ReactJs para buscar perfis e repositórios no GitHub
+                  </p>
+                  <p class="card-text">
+                    ReactJS, FireBase, Styled-Components, Integração com API Rest
                   </p>
                   <a type="link" href="https://github-search-allan.web.app" target="_blank"
                     class="btn btn-animation btn-default">Web</a>
@@ -215,9 +212,10 @@ Experiência com HTML 5, CSS 3, Material-UI, React Js, Javascript ES6, TypeScrip
                   <h5 class="card-title fs-3">ToDo List</h5>
                   <hr/>
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
+                    Aplicação Web para criar uma lista de tarefas
+                  </p>
+                  <p >
+                    ReactJS, FireBase, Styled-Components
                   </p>
                   <a type="link" href="https://todo-list-allan-babb9.web.app" target="_blank"
                     class="btn btn-animation btn-default">Web</a>
